Add icons, fix some minor ffmpeg and file encode issue, modify index.html